--- a/P000311.opf/layers/v001/Pagination.yml
+++ b/P000311.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8f01a34390934974b74c0f58fbb6f982
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a1c766c62ce14ef59f396b19da22bf7d:
