--- a/P000311.opf/meta.yml
+++ b/P000311.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000311
 initial_creation_type: ocr
+created_at: 12/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W28829
   title: དཔྱད་རྩོམ་ཚངས་པའི་ཐིག་རིས
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 578
       base_file: v001.txt
-ebook_metadata:
-  title: དཔྱད་རྩོམ་ཚངས་པའི་ཐིག་རིས
-  author: ''
-  sku: P000311
-  cover: cover.jpg
-  layers:
-  - pagination
